<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            app:layout_constraintBottom_toBottomOf="@+id/valor_capital"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/valor_capital" />

        <EditText
            android:id="@+id/valor_capital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/capital"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taxa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxa"
            app:layout_constraintBottom_toBottomOf="@+id/valor_taxa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/valor_taxa" />

        <EditText
            android:id="@+id/valor_taxa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/taxa"
            app:layout_constraintTop_toBottomOf="@+id/valor_capital" />

        <TextView
            android:id="@+id/periodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo"
            app:layout_constraintBottom_toBottomOf="@+id/qtd_tempo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/qtd_tempo" />

        <EditText
            android:id="@+id/qtd_tempo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/periodo"
            app:layout_constraintTop_toBottomOf="@+id/valor_taxa" />


        <RadioGroup
            android:id="@+id/ano_mes_dia2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtd_tempo">

            <RadioButton
                android:id="@+id/periodo_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dia"
                app:layout_constraintStart_toEndOf="@+id/periodo_mes"
                app:layout_constraintTop_toTopOf="@+id/periodo_mes" />

            <RadioButton
                android:id="@+id/periodo_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/mes"
                app:layout_constraintStart_toEndOf="@+id/periodo_ano"
                app:layout_constraintTop_toTopOf="@+id/periodo_ano" />

            <RadioButton
                android:id="@+id/periodo_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ano"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qtd_tempo" />
        </RadioGroup>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ano_mes_dia2">

            <RadioGroup
                android:id="@+id/j_simp_comp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/calcular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/juros_simp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Juros_simples"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="64dp" />

                <RadioButton
                    android:id="@+id/juros_comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Juros_composto"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="24dp" />
            </RadioGroup>

            <Button
                android:id="@+id/calcular"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:onClick="calcular_juros"
                android:text="@string/calcular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/valor_final"
            app:layout_constraintTop_toTopOf="@+id/valor_final" />

        <TextView
            android:id="@+id/valor_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/montante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>